Fix spacing

--- a/themes/plenamata/assets/scss/5-blocks/_b-estimatives-area.scss
+++ b/themes/plenamata/assets/scss/5-blocks/_b-estimatives-area.scss
@@ -22,6 +22,8 @@
     }
 
     .main-data {
+        margin-bottom: 40px;
+        
         h4 {
             font-size: size(16);
             font-weight: normal;
